--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
+        "react-modal": "^3.16.3",
+        "react-spinners": "^0.16.1",
         "yup": "^1.6.1"
     },
     "devDependencies": {
